[package]
name = "license-gen"
version = "0.1.0"
edition = "2021"
authors = ["Fraol Lemecha"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/fraol0912/license-gen"
description = "A cli tool that asks you a bunch of questions and generates a license file"
documentation = "README.md"
keywords = ["license", "generator", "cli"]
categories = ["license", "cli"]

[dependencies]
anyhow = "1.0"
inquire = "0.2.1"
serde_json = "1.0"
chrono = "0.4"
