[package]
name = "license-gen"
version = "0.1.4"
edition = "2021"
authors = ["frectonz"]
license = "MIT"
homepage = "https://github.com/frectonz/license-gen"
description = "A cli tool that asks you a bunch of questions and generates a license file"
categories = ["development-tools", "command-line-utilities"]
keywords = ["license", "cli"]

[dependencies]
anyhow = "1.0"
inquire = "0.2.1"
serde_json = "1.0"
chrono = "0.4"
